Chrome OS: Fix caption button color after theme install

Make sure the caption buttons are updated right away when the theme
changes. The bug occurs in classic Ash; it works properly in Mash.

This patch adds a test which only covers Mash to make it sure it doesn't
regress.

Bug: 877022
Change-Id: Ic4d9824396e196dd368ae896d269f862af883bbd
Reviewed-on: https://chromium-review.googlesource.com/1187406
Commit-Queue: Evan Stade <estade@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586008}
Former-commit-id: adaab7dace8096f2522ca83d13821a99234d59aa